--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo.css" type="text/css">
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRff7tt8jNJ4SlkQsVf37_KBG3MK1NdhXpUgLNrVL7yhEuWwWo" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Menú</title>
 </head>
@@ -17,7 +18,8 @@
         <li><a href="#"><i class="fas fa-tablet "></i> La barra</a></li>
         <li><a href="#"><i class="fas fa-retweet"></i> Reserva</a></li>
         <li><a href="#"><i class="fas fa-rss"></i> El blog</a></li>
-        <li><a href="#"><i class="fas fa-users "></i> Contactos</a></li>
+        <li><a href="#"><i class="fas fa-users"></i> Contactos</a></li>
+        <li><a href="#"><i class="fas fa-users"></i> Contactos</a></li>
     </ul>
  </nav>
 
