Este es un nuevo comentario

--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,8 @@
         <li><a href="#"><i class="fas fa-rss"></i> El blog</a></li>
         <li><a href="#"><i class="fas fa-users"></i> Contactos</a></li>
         <li><a href="#"><i class="fas fa-users"></i> Contactos</a></li>
+        <li><a href="#"><i class="fas fa-users"></i> Estatus</a></li>
+        <li><a href="#"><i class="fas fa-baseball-ball"> Trabajo</i></a></li>
     </ul>
  </nav>
 
